syntax = "proto3";

package proto;

option go_package = "./proto";

service OrderService {
    rpc GetOrders(GetOrdersRequest) returns (GetOrdersResponse) {}
    rpc CreateOrder(CreateOrderRequest) returns (OrderResponse) {}
}

enum PaymentMethod {
    WALLET = 0;
    CREDIT_CARD = 1;
}

message GetOrdersRequest {
    string customerId = 1;
}
message GetOrdersResponse {
    repeated OrderResponse orders = 1;
}

message CreateOrderRequest {
    string customerId = 1;
    string sellerId = 2;
    repeated Product products = 3;
    PaymentMethod paymentMethod = 4;
    string deliveryLocation = 5;
}

message Product {
    string productId = 1;
    string productName = 2;
}

message OrderResponse {
    string orderId = 1;
    string customerId = 2;
    string sellerId = 3;
    string paymentMethod = 4;
    string deliveryLocation = 5;
    repeated Product product = 6;
    string orderStatus = 7;
    string createdTimestamp = 8;
    string updatedTimestamp = 9;
}